--- a/main.html
+++ b/main.html
@@ -9,17 +9,23 @@
 <body>	
 	<script>
 		function secondHighest(arr) {
-			//Write your code here
+			let uniqueArr = [...new Set(arr)]
+			if(uniqueArr.length <=1 ){
+				rturn -Infinity;
+			}
+
+			uniqueArr.sort((a , b) => a - b);
+			return uniqueArr[uniqueArr.length - 2]
 			
 		}
 
 		function Main() {
-			var n = prompt("Enter the number of elements");
+			var n = promp("Enter the number of elements");
 			var arr = [];
 			for (var i = 0; i < n; i++) {
 				arr[i] = prompt("Enter element " + (i+1));
 			}
-			alert(secondHighest(arr));
+			aler(secondHighest(arr));
 		}
 		Main();
 	</script>
